# sqrc

./: .gitmodules  README.md  setup.py
c++/: .gitignore  CMakeLists.txt  build-app-image.sh  cmake.win.sh  make.win.sh
c++/resources/: CMakeLists.txt  sqrc.desktop
c++/sqrc-qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sqrc-qt.pro
c++/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsquarelayout.cpp  qsquarelayout.h  sqrc-qt.pro
python/: setup.py
sqrc/: __init__.py
